--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         md:left-[-320px]">
         <div class="grid gap-4">
             <!-- Container -->
-            <div class="bg-Dark max-container shadow-md max-w-[450px] p-8  rounded-xl border-[1px] w-[90%] border-DesaturedGray/30 z-30">
+            <div class="bg-Dark max-container shadow-md max-w-[470px] p-8 xl:p-12  rounded-xl border-[1px] w-[90%] border-DesaturedGray/30 z-30">
                 <div class="">
                     <!-- Form -->
                     <form action="" class="grid gap-6" id="form">
@@ -53,17 +53,17 @@
                         <div class="hidden" id="topics-container">
                             <h2 class="text-DesaturedWhite font-semibold">Which topics you are interested in?</h2>
                             <div class="grid gap-4 mt-6">
-                                <label for="topic" class="bg-VeryGray cursor-pointer relative w-full rounded-lg py-2 topic" id="topic-label">
+                                <label for="topic" class="bg-VeryGray hover:bg-slate-400/40 duration-300 ease cursor-pointer relative w-full rounded-lg py-2 topic" id="topic-label">
                                     <input type="checkbox" name="topic" value="Software Development" id="topic-id" class="w-full cursor-pointer
                                     absolute inset-0 opacity-0">
                                     <span class="text-[12px] text-DesaturedGray pl-4 font-light" id="spanTopics">Software Development</span>
                                 </label>
-                                <label for="topic" class="bg-VeryGray cursor-pointer relative w-full rounded-lg py-2 topic" id="topic-label">
+                                <label for="topic" class="bg-VeryGray hover:bg-slate-400/40 duration-300 ease cursor-pointer relative w-full rounded-lg py-2 topic" id="topic-label">
                                     <input type="checkbox" name="topic" value="User Experience" id="topic-id" class="w-full cursor-pointer
                                     absolute inset-0 opacity-0">
                                     <span class="text-[12px] text-DesaturedGray pl-4 font-light" id="spanTopics">User Experience</span>
                                 </label>
-                                <label for="topic" class="bg-VeryGray cursor-pointer relative w-full rounded-lg py-2 topic" id="topic-label">
+                                <label for="topic" class="bg-VeryGray hover:bg-slate-400/40 duration-300 ease cursor-pointer relative w-full rounded-lg py-2 topic" id="topic-label">
                                     <input type="checkbox" name="topic" value="Graphic Design" id="topic-id" class="w-full cursor-pointer
                                     absolute inset-0 opacity-0">
                                     <span class="text-[12px] text-DesaturedGray pl-4 font-light" id="spanTopics">Graphic Design</span>
@@ -97,13 +97,13 @@
                 <!-- Contenedores step -->
                 <div class="">
                     <div class="flex items-center gap-3">
-                        <button class="bg-VeryViolet/30 p-1 flex items-center rounded-full" id="set-btn">
+                        <button class="bg-VeryViolet/30 cursor-none p-1 flex items-center rounded-full" id="set-btn">
                             <span class="bg-LightViolet p-1 w-[5px] h-[5px] rounded-full" id="set-span"></span>
                         </button>
-                        <button class="bg-DesaturedGray/50 flex items-center rounded-full" id="set-btn">
+                        <button class="bg-DesaturedGray/50 cursor-none flex items-center rounded-full" id="set-btn">
                             <span class=" p-1 w-[5px] h-[5px] rounded-full" id="set-span"></span>
                         </button>
-                        <button class="bg-DesaturedGray/50 flex items-center rounded-full" id="set-btn">
+                        <button class="bg-DesaturedGray/50 cursor-none flex items-center rounded-full" id="set-btn">
                             <span class="p-1 w-[5px] h-[5px] rounded-full" id="set-span"></span>
                         </button>
                     </div>
